<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        />

        <RadioGroup
            android:id="@+id/rg_opciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_excelente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_excelente"></RadioButton>

            <RadioButton
                android:id="@+id/rb_Bueno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_bueno"></RadioButton>

            <RadioButton
                android:id="@+id/rb_malo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_malo"></RadioButton>

            <RadioButton
                android:id="@+id/rb_pesimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_pesimo"></RadioButton>
        </RadioGroup>
        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_enviar"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</LinearLayout>